Test/Sema/Bad/bad_duplicate_class_member.py.err
CHECK: bad_duplicate_class_member.py:9:5: error: Duplicate declaration of identifier in same scope: x
CHECK-NEXT: x:int = 1 # Duplicate
CHECK: bad_duplicate_class_member.py:11:9: error: Duplicate declaration of identifier in same scope: foo
CHECK-NEXT: def foo(self: "A") -> int: # Duplicate
CHECK: 2 errors generated!
